more formatting tweaks; fixed wrapping on resizing window

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     min-height: 100vh;
+    white-space: nowrap;
 }
 
 header {
@@ -19,8 +20,7 @@ header {
 
 #title {
     line-height: 1rem;
-    margin-left: 10%;
-    overflow: auto ;
+    margin-left: 5%;
 }
 
 #navBar {
@@ -45,7 +45,7 @@ header {
     
 }
 
-main {
+#main {
     display: block;
     width: 50%;
     height: 70vh;
@@ -54,6 +54,7 @@ main {
     padding-bottom: 10vh;
     margin: auto;
     margin-bottom: 0%;
+    white-space: normal;
 }
 
 .content {
@@ -64,6 +65,15 @@ main div {
     padding-left: 10px;
 }
 
+#other-links table {
+    border: 1px solid #000;
+    border-collapse: collapse;
+    border-spacing: 10px 0;
+}
+#other-links table th, #other-links table td {
+    border: 1px solid #000;
+    padding: 10px;
+}
 footer {
     position: absolute;
     bottom: 0;
